--- a/LincKia/Base.lproj/Main.storyboard
+++ b/LincKia/Base.lproj/Main.storyboard
@@ -924,11 +924,12 @@
                         <outlet property="labelTitle" destination="Aq5-Fv-p6u" id="zEB-bW-32x"/>
                         <outlet property="mobile" destination="5Wr-ps-ajP" id="0fQ-2w-quh"/>
                         <outlet property="myOrderDetailBtn" destination="yIO-pp-zbN" id="y2X-xK-6AJ"/>
+                        <segue destination="CZd-6S-DgJ" kind="push" identifier="FinishToOrderDetail" id="WSV-EB-MVC"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ce7-Vy-g3c" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4212" y="1734"/>
+            <point key="canvasLocation" x="5524" y="1617"/>
         </scene>
         <!--办公社区-->
         <scene sceneID="LWU-zO-G95">
@@ -3650,7 +3651,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Vm7-XU-82E">
+                            <tableView clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Vm7-XU-82E">
                                 <rect key="frame" x="0.0" y="64" width="320" height="374"/>
                                 <color key="backgroundColor" red="0.83921568629999999" green="0.83921568629999999" blue="0.83921568629999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <connections>
@@ -4697,7 +4698,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XyH-lu-97m" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-153" y="4958"/>
+            <point key="canvasLocation" x="-232" y="4646"/>
         </scene>
         <!--待支付-->
         <scene sceneID="2Yl-76-RNX">
@@ -4823,7 +4824,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OoY-ot-wLC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-656" y="4356"/>
+            <point key="canvasLocation" x="-724" y="4268"/>
         </scene>
         <!--修改密码-->
         <scene sceneID="JQr-Ka-3f0">
@@ -6412,12 +6413,13 @@
         <segue reference="IAq-8G-SD6"/>
         <segue reference="rah-oc-nBH"/>
         <segue reference="Jsh-Od-wNg"/>
+        <segue reference="IRi-ES-8uE"/>
         <segue reference="TUF-bB-2dv"/>
-        <segue reference="dNk-Lo-eZV"/>
         <segue reference="G1G-jf-FL5"/>
         <segue reference="0wp-aC-Pfr"/>
         <segue reference="Qfv-Fx-Zmo"/>
         <segue reference="XPk-hP-8rb"/>
-        <segue reference="GDY-Ow-HLh"/>
+        <segue reference="jyX-rV-DV2"/>
+        <segue reference="ZIW-PW-2Y5"/>
     </inferredMetricsTieBreakers>
 </document>
